fix register, disable btn on like, styles improve

--- a/front-end/src/features/Comment/components/LikesButton/LikesButton.module.scss
+++ b/front-end/src/features/Comment/components/LikesButton/LikesButton.module.scss
@@ -23,6 +23,11 @@
     justify-content: center;
     cursor: pointer;
     min-height: 11px;
+
+    &___disabled {
+      opacity: 0.5;
+    }
+
     &:hover {
       opacity: 0.8;
     }
