--- a/front-end/src/features/RegisterForm/RegisterForm.module.scss
+++ b/front-end/src/features/RegisterForm/RegisterForm.module.scss
@@ -12,11 +12,11 @@
   padding: 40px;
   border-radius: 15px;
 
-  &_nameLabel {
+  &_label {
     color: var(--grayishBlue);
   }
 
-  &_nameInput {
+  &_input {
     margin-top: 10px;
     padding: 10px;
     border: 2px solid rgba(0, 0, 0, 0.2);
