--- a/front-end/src/features/Form/Form.module.scss
+++ b/front-end/src/features/Form/Form.module.scss
@@ -22,13 +22,23 @@
   }
 
   &_input {
+    overflow: auto;
+    -webkit-font-smoothing: antialiased;
+    white-space: pre-wrap;
     border: none;
     width: 80%;
-    height: 40px;
+    max-height: 124px;
+    min-height: 40px;
     background-color: rgba(134, 142, 153, 0.1);
-    border-radius: 50px;
-    padding-left: 10px;
+    border-radius: 20px;
+    padding-left: 20px;
+    padding-top: 10px;
     resize: none;
+
+    &[contenteditable]:empty::before {
+      content: "Add a comment...";
+      color: gray;
+    }
   }
 
   &_button {
