handle br on post

--- a/front-end/src/features/Comment/components/Post/Post.module.scss
+++ b/front-end/src/features/Comment/components/Post/Post.module.scss
@@ -48,6 +48,10 @@
   &_description {
     font-size: 0.9rem;
     line-height: 1.3rem;
+    -webkit-font-smoothing: antialiased;
+    white-space: pre-wrap;
+    max-height: 250px;
+    overflow-y: auto;
   }
 }
 
